09-07-2004 Qball <Qball@qballcow.nl>
	* src/song-browser.c:	Fixed warning when disconnecting
	* src/tray-icon.c:	make sure that the tooltip is updated.
	* glade/gmpc.glade:	Added tooltips to all the buttons in the
	playlist.		
	* src/song-browser.c:	Enabled sorting on id3 browser, custom sort function.
	* src/playlist2.c:	Enabled search (ctrl-f) on right column.
	* src/song-browser.c:	Enabled search column on the right column.
	* glade/gmpc.glade:	Escape clickes the close button in the id3-info window.
	* glade/gmpc.glade:	Changed signals so gmpc doesnt crash
	when opening/closing/opening the preferences window.

08-07-2004 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:		Playlist button is now a toggle button.
	* src/playlist2.glade:		Made a toggle_playlist function.
	
06-07-2004 Qball <Qball@qballcow.nl>
	* glade/gmpc.glade:		Added a display formatting tab to the preferences menu.
	* glade/gmpc.glade:		preferences window is now resizable.
	* src/main.h:			Added a string to the preferences struct for markup_playlist and markup_song_browser
	* src/config.c:			Saving/loading of format string for playlist/browser
	* src/preferences.c:		editing of formatting song/display/playlist.
	* src/preferences.c:		Last updated label now tracks database changes aswell. (uses last_db from song-browser.)
	* glade/gmpc.glade:		Added update dbase stuff.
	* added TODO file.
	* glade/playlist.glade:	Added tooltip to find,close and add.
	* src/playlist2.c:	del signals only cought when tree in focus, you can now use del to clear search window.
	* src/playlist2.c:	unselect after delete
	* src/playlist2.c:	Unselect after crop.
	
05-07-2004 Qball <Qball@qballcow.nl>
	* src/playlist2.c/glade/playlist.glade: Added context menu to the playlist.
	* src/playlist2.c: added shuffle/clear and crop function.
04-07-2004 Qball <Qball@qballcow.nl>
	* src/misc.c:	Replace _ with a space
	* po/fr.po:	Added french translation (thanks goes to Mathieu
	Doidy)

03-07-2004 Qball <Qball@qballcow>