@@ -405,125 +405,127 @@ pl2_filter_refilter ()
  */
 int hide_playlist2 (GtkWidget * but)
 {
+	/* get the window */
+	GtkWidget *win = glade_xml_get_widget (pl2_xml, "playlist_window");	
 	gtk_window_get_position(GTK_WINDOW(glade_xml_get_widget(pl2_xml, "playlist_window")), &pl2_wsize.x, &pl2_wsize.y);
 	gtk_window_get_size(GTK_WINDOW(glade_xml_get_widget(pl2_xml, "playlist_window")), &pl2_wsize.width, &pl2_wsize.height);
-	
+
 	if(gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(glade_xml_get_widget(xml_main_window, "tb_pl2"))))
 	{
 		gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(glade_xml_get_widget(xml_main_window, "tb_pl2")), FALSE);
 		return TRUE;
 	}
-  /* get the window */
-  GtkWidget *win = glade_xml_get_widget (pl2_xml, "playlist_window");
-  /* hide the window */
-  gtk_widget_hide (win);
-  /* stop the signal (delete event from window) */
-  
-  return TRUE;
+
+
+	/* hide the window */
+	gtk_widget_hide (win);
+	/* stop the signal (delete event from window) */
+	info.pl2_hidden = FALSE; 
+	return TRUE;
 }
 
 /* if the user activate a row, grab the songid of that row and play it */
-void
+	void
 pl2_row_activated (GtkTreeView * tree, GtkTreePath * path)
 {
-  GtkTreeIter iter;
-  /* check if there is a connection */
-  if (check_connection_state ())
-    return;
-  /* get the iter from the path */
-  if (gtk_tree_model_get_iter (GTK_TREE_MODEL (pl2_fil), &iter, path))
-    {
-      gint id = 0;
-      /* get the song id */
-      gtk_tree_model_get (GTK_TREE_MODEL (pl2_fil), &iter, SONG_ID, &id, -1);
-      /* send mpd the play command */
-      mpd_sendPlayIdCommand (info.connection, id);
-      mpd_finishCommand (info.connection);
-      /* check for errors */
-      check_for_errors ();
-    }
+	GtkTreeIter iter;
+	/* check if there is a connection */
+	if (check_connection_state ())
+		return;
+	/* get the iter from the path */
+	if (gtk_tree_model_get_iter (GTK_TREE_MODEL (pl2_fil), &iter, path))
+	{
+		gint id = 0;
+		/* get the song id */
+		gtk_tree_model_get (GTK_TREE_MODEL (pl2_fil), &iter, SONG_ID, &id, -1);
+		/* send mpd the play command */
+		mpd_sendPlayIdCommand (info.connection, id);
+		mpd_finishCommand (info.connection);
+		/* check for errors */
+		check_for_errors ();
+	}
 }
 
 
 /* delete all selected songs,
  * if no songs select ask the user if he want's to clear the list 
  */
-void
+	void
 pl2_delete_selected_songs ()
 {
-  /* grab the selection from the tree */
-  GtkTreeSelection *selection =
-    gtk_tree_view_get_selection (GTK_TREE_VIEW
-				 (glade_xml_get_widget (pl2_xml, "pl_tree")));
-  /* check if where connected */
-  if (check_connection_state ())
-    return;
-  /* see if there is a row selected */
-  if (gtk_tree_selection_count_selected_rows (selection) > 0)
-    {
-      GList *list = NULL, *llist = NULL;
-      /* start a command list */
-      mpd_sendCommandListBegin (info.connection);
-      /* grab the selected songs */
-      list = gtk_tree_selection_get_selected_rows (selection, &pl2_fil);
-      /* grab the last song that is selected */
-      llist = g_list_last (list);
-      /* remove every selected song one by one */
-      do
+	/* grab the selection from the tree */
+	GtkTreeSelection *selection =
+		gtk_tree_view_get_selection (GTK_TREE_VIEW
+				(glade_xml_get_widget (pl2_xml, "pl_tree")));
+	/* check if where connected */
+	if (check_connection_state ())
+		return;
+	/* see if there is a row selected */
+	if (gtk_tree_selection_count_selected_rows (selection) > 0)
 	{
-	  GtkTreeIter iter;
-	  int value;
-	  gtk_tree_model_get_iter (pl2_fil, &iter,
-				   (GtkTreePath *) llist->data);
-	  gtk_tree_model_get (pl2_fil, &iter, SONG_ID, &value, -1);
-	  mpd_sendDeleteIdCommand (info.connection, value);
+		GList *list = NULL, *llist = NULL;
+		/* start a command list */
+		mpd_sendCommandListBegin (info.connection);
+		/* grab the selected songs */
+		list = gtk_tree_selection_get_selected_rows (selection, &pl2_fil);
+		/* grab the last song that is selected */
+		llist = g_list_last (list);
+		/* remove every selected song one by one */
+		do
+		{
+			GtkTreeIter iter;
+			int value;
+			gtk_tree_model_get_iter (pl2_fil, &iter,
+					(GtkTreePath *) llist->data);
+			gtk_tree_model_get (pl2_fil, &iter, SONG_ID, &value, -1);
+			mpd_sendDeleteIdCommand (info.connection, value);
+		}
+		while ((llist = g_list_previous (llist)));
+		/* free list */
+		g_list_foreach (list, (GFunc) gtk_tree_path_free, NULL);
+		g_list_free (list);
+		/* close the list, so it will be executed */
+		mpd_sendCommandListEnd (info.connection);
+		mpd_finishCommand (info.connection);
+		check_for_errors ();
 	}
-      while ((llist = g_list_previous (llist)));
-      /* free list */
-      g_list_foreach (list, (GFunc) gtk_tree_path_free, NULL);
-      g_list_free (list);
-      /* close the list, so it will be executed */
-      mpd_sendCommandListEnd (info.connection);
-      mpd_finishCommand (info.connection);
-      check_for_errors ();
-    }
-  else
-    {
-      /* create a warning message dialog */
-      GtkWidget *dialog =
-	gtk_message_dialog_new (GTK_WINDOW
-				(glade_xml_get_widget
-				 (pl2_xml, "playlist_window")),
-				GTK_DIALOG_MODAL,
-				GTK_MESSAGE_WARNING,
-				GTK_BUTTONS_NONE,
-				_
-				("Are you sure you want to clear the playlist?"));
-      gtk_dialog_add_buttons (GTK_DIALOG (dialog), GTK_STOCK_CANCEL,
-			      GTK_RESPONSE_CANCEL, GTK_STOCK_OK,
-			      GTK_RESPONSE_OK, NULL);
-      gtk_dialog_set_default_response (GTK_DIALOG (dialog),
-				       GTK_RESPONSE_CANCEL);
+	else
+	{
+		/* create a warning message dialog */
+		GtkWidget *dialog =
+			gtk_message_dialog_new (GTK_WINDOW
+					(glade_xml_get_widget
+					 (pl2_xml, "playlist_window")),
+					GTK_DIALOG_MODAL,
+					GTK_MESSAGE_WARNING,
+					GTK_BUTTONS_NONE,
+					_
+					("Are you sure you want to clear the playlist?"));
+		gtk_dialog_add_buttons (GTK_DIALOG (dialog), GTK_STOCK_CANCEL,
+				GTK_RESPONSE_CANCEL, GTK_STOCK_OK,
+				GTK_RESPONSE_OK, NULL);
+		gtk_dialog_set_default_response (GTK_DIALOG (dialog),
+				GTK_RESPONSE_CANCEL);
 
-      switch (gtk_dialog_run (GTK_DIALOG (dialog)))
-	{
-	case GTK_RESPONSE_OK:
-	  /* check if where still connected */
-	  if (!check_connection_state ())
-	    {
-	      /* clear the playlist */
-	      mpd_sendClearCommand (info.connection);
-	      mpd_finishCommand (info.connection);
-	      check_for_errors ();
-	    }
+		switch (gtk_dialog_run (GTK_DIALOG (dialog)))
+		{
+			case GTK_RESPONSE_OK:
+				/* check if where still connected */
+				if (!check_connection_state ())
+				{
+					/* clear the playlist */
+					mpd_sendClearCommand (info.connection);
+					mpd_finishCommand (info.connection);
+					check_for_errors ();
+				}
+		}
+		gtk_widget_destroy (GTK_WIDGET (dialog));
 	}
-      gtk_widget_destroy (GTK_WIDGET (dialog));
-    }
-  /* update everything if where still connected */
-    gtk_tree_selection_unselect_all(selection);
-  if (!check_connection_state ())
-    main_trigger_update ();
-  
+	/* update everything if where still connected */
+	gtk_tree_selection_unselect_all(selection);
+	if (!check_connection_state ())
+		main_trigger_update ();
+
 }
 
 
@@ -532,128 +534,128 @@ pl2_delete_selected_songs ()
  * trigged on button click 
  */
 
-void
+	void
 pl2_show_song_info ()
 {
-  int i = 0;
-  GtkTreeModel *model = GTK_TREE_MODEL (pl2_fil);
-  /* get the tree selection object */
-  GtkTreeSelection *selection =
-    gtk_tree_view_get_selection (GTK_TREE_VIEW
-				 (glade_xml_get_widget (pl2_xml, "pl_tree")));
-  /* check if there are selected rows */
-  if ((i = gtk_tree_selection_count_selected_rows (selection)) > 0)
-    {
-      GList *list = NULL;
-      list = gtk_tree_selection_get_selected_rows (selection, &model);
-      /* iterate over every row */
-      list = g_list_last (list);
-      do
+	int i = 0;
+	GtkTreeModel *model = GTK_TREE_MODEL (pl2_fil);
+	/* get the tree selection object */
+	GtkTreeSelection *selection =
+		gtk_tree_view_get_selection (GTK_TREE_VIEW
+				(glade_xml_get_widget (pl2_xml, "pl_tree")));
+	/* check if there are selected rows */
+	if ((i = gtk_tree_selection_count_selected_rows (selection)) > 0)
 	{
-	  GtkTreeIter iter;
-	  int value;
-	  gtk_tree_model_get_iter (model, &iter, (GtkTreePath *) list->data);
-	  gtk_tree_model_get (model, &iter, SONG_POS, &value, -1);
-	  /* show the info for this song  */
-	  call_id3_window (value);
-	  /* go to previous song if still connected */
+		GList *list = NULL;
+		list = gtk_tree_selection_get_selected_rows (selection, &model);
+		/* iterate over every row */
+		list = g_list_last (list);
+		do
+		{
+			GtkTreeIter iter;
+			int value;
+			gtk_tree_model_get_iter (model, &iter, (GtkTreePath *) list->data);
+			gtk_tree_model_get (model, &iter, SONG_POS, &value, -1);
+			/* show the info for this song  */
+			call_id3_window (value);
+			/* go to previous song if still connected */
+		}
+		while ((list = g_list_previous (list)) && !check_connection_state ());
+		/* free list */
+		g_list_foreach (list, (GFunc) gtk_tree_path_free, NULL);
+		g_list_free (list);
 	}
-      while ((list = g_list_previous (list)) && !check_connection_state ());
-      /* free list */
-      g_list_foreach (list, (GFunc) gtk_tree_path_free, NULL);
-      g_list_free (list);
-    }
 }
 
 /* signal triggered when the row is dropped back onto the playlist */
-gboolean
+	gboolean
 pl2_row_moved (GtkTreeView * tree, GdkDragContext * con, gint x, gint y,
-	       guint time)
+		guint time)
 {
-  GtkTreePath *path = NULL;
-  GtkTreeViewDropPosition pos;
-  GtkTreeIter iter, iter2;
-  gint pos1, pos2;
-  GtkTreeSelection *selection = gtk_tree_view_get_selection (tree);
-  /* if where disconnected just quit */
-  if (check_connection_state ())
-    return TRUE;
+	GtkTreePath *path = NULL;
+	GtkTreeViewDropPosition pos;
+	GtkTreeIter iter, iter2;
+	gint pos1, pos2;
+	GtkTreeSelection *selection = gtk_tree_view_get_selection (tree);
+	/* if where disconnected just quit */
+	if (check_connection_state ())
+		return TRUE;
 
 
 
-  /* get drop location */
-  gtk_tree_view_get_dest_row_at_pos (tree, x, y, &path, &pos);
-  if (path == NULL)
-    {
-      /* dropped to a place where I can't move to */
-      g_print ("Don't know where to move it to\n");
-      return TRUE;
-    }
-  /* grab drop localtion */
-  gtk_tree_model_get_iter (GTK_TREE_MODEL (pl2_fil), &iter, path);
-  gtk_tree_model_get (GTK_TREE_MODEL (pl2_fil), &iter, SONG_POS, &pos2, -1);
-  gtk_tree_path_free (path);
-
-  /* adjust position acording to drop after or for, also take last song in account */
-  if (pos == GTK_TREE_VIEW_DROP_AFTER
-      && pos2 < info.status->playlistLength - 1)
-    {
-      pos2 = pos2 + 1;
-    }
-
-
-  /* move every dragged row */
-  if (gtk_tree_selection_count_selected_rows (selection) > 0)
-    {
-      GList *list = NULL;
-      list = gtk_tree_selection_get_selected_rows (selection, &pl2_fil);
-      list = g_list_last (list);
-      int i = 0;
-      /* start a command list */
-      mpd_sendCommandListBegin (info.connection);
-      do
+	/* get drop location */
+	gtk_tree_view_get_dest_row_at_pos (tree, x, y, &path, &pos);
+	if (path == NULL)
 	{
-	  int dropl = pos2;
-	  gtk_tree_model_get_iter (pl2_fil, &iter2,
-				   (GtkTreePath *) list->data);
-
-	  /* get start pos */
-	  gtk_tree_model_get (pl2_fil, &iter2, SONG_POS, &pos1, -1);
-	  /* compensate for previous moves */
-	  /* if we move after the current */
-	  if (pos1 < pos2)
-	    {
-	      pos1 -= i;
-	      if (pos == GTK_TREE_VIEW_DROP_BEFORE ||
-		  pos == GTK_TREE_VIEW_DROP_INTO_OR_BEFORE)
-		dropl -= 1;
-	    }
-	  else if (pos1 > pos2)
-	    {
-	      pos1 += i;
-	    }
-
-	  mpd_sendMoveCommand (info.connection, pos1, dropl);
-	  i++;
+		/* dropped to a place where I can't move to */
+		g_print ("Don't know where to move it to\n");
+		return TRUE;
 	}
-      while ((list = g_list_previous (list)));
-      /* free list */
-      g_list_foreach (list, (GFunc) gtk_tree_path_free, NULL);
-      g_list_free (list);
+	/* grab drop localtion */
+	gtk_tree_model_get_iter (GTK_TREE_MODEL (pl2_fil), &iter, path);
+	gtk_tree_model_get (GTK_TREE_MODEL (pl2_fil), &iter, SONG_POS, &pos2, -1);
+	gtk_tree_path_free (path);
 
-      mpd_sendCommandListEnd (info.connection);
-      mpd_finishCommand (info.connection);
-      check_for_errors ();
-    }
-  /* stop the signal */
-  g_signal_stop_emission_by_name (G_OBJECT (tree), "drag-drop");
-  /* trigger updates if connected */
-  if (!check_connection_state ())
-    main_trigger_update ();
-  /* finish the drag */
-  gtk_drag_finish (con, TRUE, FALSE, time);
-  /* */
-  return TRUE;
+	/* adjust position acording to drop after or for, also take last song in account */
+	if (pos == GTK_TREE_VIEW_DROP_AFTER
+			&& pos2 < info.status->playlistLength - 1)
+	{
+		pos2 = pos2 + 1;
+	}
+
+
+	/* move every dragged row */
+	if (gtk_tree_selection_count_selected_rows (selection) > 0)
+	{
+		GList *list = NULL;
+		list = gtk_tree_selection_get_selected_rows (selection, &pl2_fil);
+		list = g_list_last (list);
+		int i = 0;
+		/* start a command list */
+		mpd_sendCommandListBegin (info.connection);
+		do
+		{
+			int dropl = pos2;
+			gtk_tree_model_get_iter (pl2_fil, &iter2,
+					(GtkTreePath *) list->data);
+
+			/* get start pos */
+			gtk_tree_model_get (pl2_fil, &iter2, SONG_POS, &pos1, -1);
+			/* compensate for previous moves */
+			/* if we move after the current */
+			if (pos1 < pos2)
+			{
+				pos1 -= i;
+				if (pos == GTK_TREE_VIEW_DROP_BEFORE ||
+						pos == GTK_TREE_VIEW_DROP_INTO_OR_BEFORE)
+					dropl -= 1;
+			}
+			else if (pos1 > pos2)
+			{
+				pos1 += i;
+			}
+
+			mpd_sendMoveCommand (info.connection, pos1, dropl);
+			i++;
+		}
+		while ((list = g_list_previous (list)));
+		/* free list */
+		g_list_foreach (list, (GFunc) gtk_tree_path_free, NULL);
+		g_list_free (list);
+
+		mpd_sendCommandListEnd (info.connection);
+		mpd_finishCommand (info.connection);
+		check_for_errors ();
+	}
+	/* stop the signal */
+	g_signal_stop_emission_by_name (G_OBJECT (tree), "drag-drop");
+	/* trigger updates if connected */
+	if (!check_connection_state ())
+		main_trigger_update ();
+	/* finish the drag */
+	gtk_drag_finish (con, TRUE, FALSE, time);
+	/* */
+	return TRUE;
 }
 
 
@@ -661,108 +663,108 @@ pl2_row_moved (GtkTreeView * tree, GdkDragContext * con, gint x, gint y,
  * This is done only once, for the rest its hidden, but still there
  */
 
-void
+	void
 create_playlist2 ()
 {
-  GtkCellRenderer *renderer;
-  GtkWidget *tree;
-  GtkTargetEntry target;
-  GtkTreeViewColumn *column = NULL;
+	GtkCellRenderer *renderer;
+	GtkWidget *tree;
+	GtkTargetEntry target;
+	GtkTreeViewColumn *column = NULL;
+	info.pl2_hidden = TRUE;
+	/* if we exists pop the window up */
+	if (pl2_xml != NULL)
+	{
+		gtk_window_move(GTK_WINDOW(glade_xml_get_widget(pl2_xml, "playlist_window")), pl2_wsize.x, pl2_wsize.y);
+		gtk_window_resize(GTK_WINDOW(glade_xml_get_widget(pl2_xml, "playlist_window")),pl2_wsize.width, pl2_wsize.height);
+		gtk_widget_show_all (glade_xml_get_widget (pl2_xml, "playlist_window"));
+		return;
+	}
+	/* load gui desciption */
+	pl2_xml =
+		glade_xml_new (GLADE_PATH "playlist.glade", "playlist_window", NULL);
 
-  /* if we exists pop the window up */
-  if (pl2_xml != NULL)
-    {
-	    gtk_window_move(GTK_WINDOW(glade_xml_get_widget(pl2_xml, "playlist_window")), pl2_wsize.x, pl2_wsize.y);
-	    gtk_window_resize(GTK_WINDOW(glade_xml_get_widget(pl2_xml, "playlist_window")),pl2_wsize.width, pl2_wsize.height);
-	    gtk_widget_show_all (glade_xml_get_widget (pl2_xml, "playlist_window"));
-	    return;
-    }
-  /* load gui desciption */
-  pl2_xml =
-	  glade_xml_new (GLADE_PATH "playlist.glade", "playlist_window", NULL);
+	/* obsolete, but cant hurt either */
+	if (pl2_store == NULL)
+	{
+		/* song id, song title */
+		pl2_store = gtk_list_store_new (NROWS, GTK_TYPE_INT,	/* song id */
+				GTK_TYPE_INT,	/* pos id */
+				GTK_TYPE_STRING,	/* song title */
+				GTK_TYPE_INT,	/* color string */
+				G_TYPE_BOOLEAN);	/* enble color */
+	}
 
-  /* obsolete, but cant hurt either */
-  if (pl2_store == NULL)
-  {
-	  /* song id, song title */
-	  pl2_store = gtk_list_store_new (NROWS, GTK_TYPE_INT,	/* song id */
-			  GTK_TYPE_INT,	/* pos id */
-			  GTK_TYPE_STRING,	/* song title */
-			  GTK_TYPE_INT,	/* color string */
-			  G_TYPE_BOOLEAN);	/* enble color */
-  }
+	tree = glade_xml_get_widget (pl2_xml, "pl_tree");
 
-  tree = glade_xml_get_widget (pl2_xml, "pl_tree");
+	/* set selection mode, so the user can select more then one row  */
+	gtk_tree_selection_set_mode (GTK_TREE_SELECTION
+			(gtk_tree_view_get_selection
+			 (GTK_TREE_VIEW (tree))),
+			GTK_SELECTION_MULTIPLE);
 
-  /* set selection mode, so the user can select more then one row  */
-  gtk_tree_selection_set_mode (GTK_TREE_SELECTION
-		  (gtk_tree_view_get_selection
-		   (GTK_TREE_VIEW (tree))),
-		  GTK_SELECTION_MULTIPLE);
+	/* set filter */
+	pl2_fil = gtk_tree_model_filter_new (GTK_TREE_MODEL (pl2_store), NULL);
 
-  /* set filter */
-  pl2_fil = gtk_tree_model_filter_new (GTK_TREE_MODEL (pl2_store), NULL);
-
-  gtk_tree_view_set_model (GTK_TREE_VIEW (tree), GTK_TREE_MODEL (pl2_fil));
-  gtk_tree_view_set_search_column(GTK_TREE_VIEW(tree), 2);
-
-
+	gtk_tree_view_set_model (GTK_TREE_VIEW (tree), GTK_TREE_MODEL (pl2_fil));
+	gtk_tree_view_set_search_column(GTK_TREE_VIEW(tree), 2);
 
 
-  /* draw the column with the songs */
-  renderer = gtk_cell_renderer_pixbuf_new ();
-  column = gtk_tree_view_column_new ();
-  gtk_tree_view_column_pack_start (column, renderer, FALSE);
-  gtk_tree_view_column_set_attributes (column,
-		  renderer,
-		  "stock-id", SONG_STOCK_ID, NULL);
 
 
-  renderer = gtk_cell_renderer_text_new ();
-
-  /* insert the column in the tree */
-  gtk_tree_view_column_pack_start (column, renderer, TRUE);
-  gtk_tree_view_column_set_attributes (column,
-		  renderer,
-		  "text", SONG_TITLE,
-		  "weight", WEIGHT_INT,
-		  "weight-set", WEIGHT_ENABLE, NULL);
-
-  gtk_tree_view_append_column (GTK_TREE_VIEW (tree), column);
-
-  /* set filter function */
-  gtk_tree_model_filter_set_visible_func (GTK_TREE_MODEL_FILTER (pl2_fil),
-		  (GtkTreeModelFilterVisibleFunc)
-		  pl2_filter_function, NULL, NULL);
+	/* draw the column with the songs */
+	renderer = gtk_cell_renderer_pixbuf_new ();
+	column = gtk_tree_view_column_new ();
+	gtk_tree_view_column_pack_start (column, renderer, FALSE);
+	gtk_tree_view_column_set_attributes (column,
+			renderer,
+			"stock-id", SONG_STOCK_ID, NULL);
 
 
-  /* Dragging */
-  target.target = "other";
-  target.flags = GTK_TARGET_SAME_WIDGET;
-  target.info = 2;
+	renderer = gtk_cell_renderer_text_new ();
 
-  gtk_tree_view_enable_model_drag_source (GTK_TREE_VIEW (tree),
-		  GDK_BUTTON1_MASK, &target, 1,
-		  GDK_ACTION_MOVE);
-  gtk_tree_view_enable_model_drag_dest (GTK_TREE_VIEW (tree), &target, 1,
-		  GDK_ACTION_MOVE);
+	/* insert the column in the tree */
+	gtk_tree_view_column_pack_start (column, renderer, TRUE);
+	gtk_tree_view_column_set_attributes (column,
+			renderer,
+			"text", SONG_TITLE,
+			"weight", WEIGHT_INT,
+			"weight-set", WEIGHT_ENABLE, NULL);
 
-  /* allow playlist (links) to be dragged onto the open-location buttn */
-  gtk_drag_dest_set (glade_xml_get_widget (pl2_xml, "button7"),
-		  GTK_DEST_DEFAULT_ALL, drag_types, 1, GDK_ACTION_COPY);
+	gtk_tree_view_append_column (GTK_TREE_VIEW (tree), column);
 
-  g_signal_connect (G_OBJECT (glade_xml_get_widget (pl2_xml, "button7")),
-		  "drag_data_received", G_CALLBACK (pl2_drag_data_recieved),
-		  NULL);
+	/* set filter function */
+	gtk_tree_model_filter_set_visible_func (GTK_TREE_MODEL_FILTER (pl2_fil),
+			(GtkTreeModelFilterVisibleFunc)
+			pl2_filter_function, NULL, NULL);
 
-  /* if where not connected call the disconnect function that will set some highlighting ok */
-  if (check_connection_state ())
-  {
-	  pl2_disconnect ();
-  }
 
-  /* connect signals that are defined in the gui description */
-  glade_xml_signal_autoconnect (pl2_xml);
+	/* Dragging */
+	target.target = "other";
+	target.flags = GTK_TARGET_SAME_WIDGET;
+	target.info = 2;
+
+	gtk_tree_view_enable_model_drag_source (GTK_TREE_VIEW (tree),
+			GDK_BUTTON1_MASK, &target, 1,
+			GDK_ACTION_MOVE);
+	gtk_tree_view_enable_model_drag_dest (GTK_TREE_VIEW (tree), &target, 1,
+			GDK_ACTION_MOVE);
+
+	/* allow playlist (links) to be dragged onto the open-location buttn */
+	gtk_drag_dest_set (glade_xml_get_widget (pl2_xml, "button7"),
+			GTK_DEST_DEFAULT_ALL, drag_types, 1, GDK_ACTION_COPY);
+
+	g_signal_connect (G_OBJECT (glade_xml_get_widget (pl2_xml, "button7")),
+			"drag_data_received", G_CALLBACK (pl2_drag_data_recieved),
+			NULL);
+
+	/* if where not connected call the disconnect function that will set some highlighting ok */
+	if (check_connection_state ())
+	{
+		pl2_disconnect ();
+	}
+
+	/* connect signals that are defined in the gui description */
+	glade_xml_signal_autoconnect (pl2_xml);
 }
 
 
